# base

./: .gitmodules  README.md  package-lock.json  package.json  splashscreen.html  tsconfig.json
public/: recorder-processor.js
src/: App.css  App.tsx  types.ts  wavRecorder.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utility.rs
src-tauri/src/commands/: answer.rs  mod.rs  transcribe.rs
src/components/: Answer.tsx  ErrorBox.tsx  RecordButton.tsx  TItleBar.tsx  Transcript.tsx  Waveform.tsx
